# my_dives

./: .gitignore  Cargo.toml  Rocket.toml  build.rs  diesel1.txt  my_dives.txt
migrations/2018-03-29-104302_dives/: down.sql  up.sql
migrations/2018-03-29-115616_loggedinusers/: down.sql  up.sql
migrations/2018-04-01-123346_diversdives/: down.sql  up.sql
migrations/2018-04-27-083953_divers/: down.sql  up.sql
migrations/2018-06-28-073421_trainings/: up.sql
migrations/2018-06-28-073846_diverstrainings/: down.sql  up.sql
migrations/2018-06-28-074004_trainingsdives/: down.sql  up.sql
migrations/2018-08-15-145254_competitions/: down.sql  up.sql
migrations/2018-08-16-070655_competitiondives/: down.sql  up.sql
src/: core_database_api.rs  database_api.rs  deletion_database_api.rs  export_to_csv.rs  form_data.rs  initialize_db.rs  lib.rs  models.rs  old_schema.rs  responders.rs  schema.rs  statistics_overview.rs  template_context.rs  texts.rs  utils.rs
static/: chart_set_up.js  dd_parctice_platforms.txt  dd_table.txt  dd_table_platfrom.txt
templates/: base.html.tera  competition_dives.html.tera  competitions.html.tera  dive_statistics_overview.html.tera  dives.html.tera  index.html.tera  log_competition.html.tera  log_training.html.tera  login.html.tera  register.html.tera  styles.css  trainings.html.tera
