[package]
name = "my_dives"
version = "0.1.0"
authors = ["Helena Troili <helena.troili@tomologic.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
rand = "0.4"
diesel = { version = "1.3.2", features = ["postgres"] }
dotenv = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tera = "0.10"
itertools = "0.7"
chrono = "0.4"

[dependencies.rocket_contrib]
default-features = false
features = ["tera_templates"]
#
#[build-dependencies]
#clippy = { version = "*", optional = true }
#
#[features]
#default = []
